# tcp-scpi

./: README.md  pyproject.toml
src/tcp_scpi/: __init__.py  tcp_scpi.py
