[build-system]
requires = ["setuptools>=61.0", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "tcp-scpi"
dynamic = ["version"]
description = "Network SCPI Controller"
authors = [{ name = "Hinerk Stender", email = "hinerk.stender@mail.de" }]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true
